# claud-coin

./: .coin.code-workspace  .cspell.json  .gitignore  CLAUDEME.md  Cargo.toml  GRANTME.md  README.md  aider.conf.yml
.RESEARCH_PLANNING/: FUNCTIONAL-STRATEGY.md
client/: Cargo.toml
client/src/: lib.rs
docs/: CALC_TOKENOMICS.md  FEATURE-3-user-interaction-systems.md  FEATURE_PLAN.md  MCP_NFT_FLOW.md  PROJECT_MAP.md  RESEARCH-PLAN.md  RISK_ANALYSIS.md  STRATEGIC_PHILOSOPHY.md  aider-docs.txt  building-mcp-with-llms.txt  fastAPI-StreamingResponse-SSE.md  functional-system-strategy.md  llms-full.txt  planning-conversation-thread-cutoff.txt  project-management.txt
docs/feature-build/: 01-mcp-transport-layer.md  01_MCP_TRANSPORT_LAYER.md  02-token-economics.md  02_TOKEN_ECONOMICS.md  03-user-interaction.md  03_USER_INTERACTION.md  04-community-management.md  04_COMMUNITY_MANAGEMENT.md  05-developmental-roadmap-phases.md  05_DEVELOPMENT_PHASES.md  06-technical-requirements-Infrastructure.md  06_INFRASTRUCTURE_REQUIREMENTS.md  FEATURE-1-core-mcp-integration.md  FEATURE-2-token-economics-distribution.md  FEATURE-3-user-interaction-systems.md  FEATURE-5-development-roadmap.md
docs/feature-build/01-draft/: og-FEATURE-2-token-economics-distribution.md  og-FEATURE-4-community-management.md  og-FEATURE-5-development-roadmap.md  og-FEATURE-6-technical-requirements.md
docs/feature-build/02-draft/: FEATURE-1-core-mcp-integration.md  FEATURE-2-token-economics-distribution.md
docs/research-planning/: RESEARCH-PLAN.md
docs/task-prompt-poas/: 250125-POA.txt
docs/workspace/: coding-tools.md  project-knowledge.md  system-message.md  tool-commands.md
src/: error.rs  instruction.rs  lib.rs  processor.rs  state.rs
