[package]
name = "claud-coin"
version = "0.1.0"
edition = "2021"
description = "A Solana-based cryptocurrency project"
authors = ["Your Name <your.email@example.com>"]

[features]
no-entrypoint = []

[dependencies]
solana-program = "1.17.0"
borsh = "0.10.3"
thiserror = "1.0.50"
spl-token = { version = "4.0.0", features = ["no-entrypoint"] }
arrayref = "0.3.7"
num-derive = "0.4"
num-traits = "0.2"
sha2 = "0.10.8"

[dev-dependencies]
solana-program-test = "1.17.0"
solana-sdk = "1.17.0"
proptest = "1.3"
criterion = { version = "0.5", features = ["html_reports"] }

[lib]
crate-type = ["cdylib", "lib"]

[workspace]
members = [
    ".",
    "client"
]

[[bench]]
name = "program_benchmarks"
harness = false 